public/assets/css/form-base.css
fieldset {
	margin: 0;
	padding: 0;
	border: 0;
}

label,
legend {
	display: block;
	margin: 1.5rem 0 0.25rem;
}

.field-legend:after,
.field-wrapper:after,
.form-group:after {
	display: table;
	content: "";
	clear: both;
}

input[type="checkbox"],
input[type="radio"],
input[type="checkbox"] + label,
input[type="radio"] + label {
	float: left;
	margin: 0 0 1rem;
}

input[type="checkbox"],
input[type="radio"] {
	margin-right: 1rem;
	clear: left;
}

input[type="text"],
input[type="number"],
input[type="tel"],
input[type="password"],
input[type="time"],
input[type="search"],
input[type="date"],
input[type="email"],
input[type="url"],
textarea {
	border: 1px solid #777;
	width: 100%;
	padding: 0.5rem;
}

.help-block {
	margin: 0.5rem 0 0;
	color: #666;
}

.help-block:empty {
  margin: 0;
}

.help-block ul {
	margin: 0;
}

.help-block .list-unstyled {
	padding: 0;
}

.has-error .help-block {
	color: red;
}

.form-section,
.form-section-header {
	display: none;
}

.form-section.active,
.form-section-header.active {
	display: block;
}

.form-section-header {
	font-size: 1.5em;
}

.form-section-prev,
.form-section-next {
	margin-top: 1.5rem;
}

.form-section-prev {
	float: left;
}

.form-section-next {
	float: right;
}

@media screen and (min-width: 40rem) {
	.form-horizontal {
		float: left;
	}

	.form-horizontal {
		width: 60%;
	}
}

@media screen and (min-width: 70rem) {
	.form-horizontal {
		width: 70%;
	}
}

/* Only display legend to screen readers*/

#SFDSWFB-legend {
	position: absolute !important;
	height: 1px; width: 1px;
	overflow: hidden;
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
}

